<resources>
    <string name="app_name">Inept Amazon</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_user">Register User</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="admin">admin</string>
    <string name="description">Description</string>
    <string name="product_name">Product Name</string>
    <string name="_1">1</string>
    <string name="admin_page">Admin Page</string>
    <string name="view_users">View Users</string>
    <string name="manage_inventory">Manage Inventory</string>
    <string name="supply">Supply</string>
    <string name="save">Save</string>
    <string name="user_password">User Password</string>
    <string name="welcome_to_inept_amazon">Welcome to Inept Amazon</string>
    <string name="buy_items">Buy Items</string>
    <string name="check_orders">Check Orders</string>
    <string name="buy_item">Add item to cart?</string>
    <string name="search">Search</string>
    <string name="cancel_item">Cancel Order?</string>
</resources>